--- a/netlify.toml
+++ b/netlify.toml
@@ -37,7 +37,7 @@
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://freak-app-production.up.railway.app wss://freak-app-production.up.railway.app https://tenor.googleapis.com; media-src 'self' blob:; font-src 'self' data:; frame-ancestors 'none';"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' 'wasm-unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://freak-app-production.up.railway.app wss://freak-app-production.up.railway.app https://tenor.googleapis.com https://storage.googleapis.com https://cdn.jsdelivr.net; media-src 'self' blob:; font-src 'self' data:; frame-ancestors 'none'; worker-src 'self' blob: https://cdn.jsdelivr.net;"
     Permissions-Policy = "geolocation=(), payment=(), usb=()"
 
 # Cache optimization
